--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
@@ -17,6 +19,7 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.2.0",
     "react-awesome-lightbox": "^1.8.1",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-viewer": "^3.2.2",
