--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "react-mui",
+  "name": "new-mui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@material-ui/styles": "^4.11.5",
-    "@mui/icons-material": "^5.10.6",
-    "@mui/material": "^5.10.6",
-    "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
+    "@mui/styles": "^5.10.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "material": "file:material-ui/core@4.8.2",
-    "material-ui-search-bar": "^1.0.0",
     "react": "^18.2.0",
-    "react-awesome-lightbox": "^1.8.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.3",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-viewer": "^3.2.2",
-    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
